# Fractal-memory

./: .bashrc_poetry  .env.example  .env.test  .gitignore  DECISIONS.md  LICENSE  Makefile  PROGRESS.md  README.md  debug_launcher.py  docker-compose.yml  pyproject.toml  requirements.txt  run_cli.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
.kiro/specs/audit-fixes/: README.md  requirements.md  tasks.md
.kiro/specs/critical-fixes/: PHASE_0_REPORT.md  SPEC_COMPLETE.md  design.md  requirements.md  tasks.md
.kiro/specs/phase-4-improvements/: SPEC_READY.md  design.md  requirements.md  tasks.md
.kiro/specs/project-audit/: design.md  requirements.md  tasks.md
.kiro/specs/remaining-critical-fixes/: SPEC_READY.md  design.md  requirements.md  tasks.md
audit/: COMMON_ISSUES.md  README.md  __init__.py  config.py  main.py  orchestrator.py  run_audit.py
audit/checkers/: __init__.py  api_validator.py  config_validator.py  frontend_validator.py  import_checker.py  schema_validator.py
audit/core/: __init__.py  base_checker.py  models.py
audit/reports/: __init__.py  generator.py
audit/testers/: __init__.py  e2e_validator.py  learning_tester.py  memory_tester.py  retrieval_tester.py  test_api_validator.py  test_import_checker.py  test_memory_tester.py  test_retrieval_tester.py  test_schema_validator.py
audit_reports/: audit_after_phase1.md  audit_after_phase2.md  audit_phase1_complete.md  audit_phase2_schema.md  audit_report_20251206_062022.md  audit_report_20251206_063653.md  audit_report_20251206_063910.md  audit_report_20251206_113858.md  audit_report_20251206_204938.md  audit_report_20251206_205506.md  audit_report_20251206_205537.json  audit_report_20251206_215936.md  audit_report_20251207_015346.md  audit_report_20251207_025022.md  audit_report_20251207_031412.md  audit_report_20251207_033044.md  audit_report_20251207_033953.md  audit_report_20251207_034005.md  audit_report_20251207_035758.md  audit_report_20251207_042858.md  audit_report_20251207_084733.md  audit_report_20251207_093831.md  audit_report_20251207_093921.md  audit_report_20251207_175807.md  audit_report_20251207_175816.md  audit_report_20251207_180239.md  audit_report_20251207_180250.md  audit_report_20251207_180958.md  audit_report_20251207_191129.md  audit_report_20251207_191642.md
backend/: __init__.py  config.py  main.py  models.py
backend/routers/: chat.py  health.py  memory.py
cli/: __init__.py  main.py
docker/: Dockerfile.backend
docs/: 01_ARCHITECTURE.md  02_PHASE1_SETUP.md  03_PHASE2_MEMORY.md  04_PHASE3_LEARNING.md  05_PHASE4_PRODUCTION.md  06_FUTURE_ROADMAP.md  07_VM_SETUP.md  08_TESTING.md
examples/: 01_basic_usage.py  02_learning_demo.py  README.md
fractal-memory-interface/: App.tsx  Dockerfile  constants.ts  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  types.ts  vite.config.ts  vitest.config.ts
fractal-memory-interface/components/Chat/: InputArea.tsx  MessageBubble.tsx
fractal-memory-interface/components/Layout/: Header.tsx
fractal-memory-interface/components/Memory/: GraphView.tsx  MemoryBrowser.tsx  StatsPanel.tsx
fractal-memory-interface/services/: api.ts
fractal-memory-interface/tests/: App.test.tsx  README.md  setup.ts
fractal-memory-interface/tests/components/: InputArea.test.tsx  MessageBubble.test.tsx  StatsPanel.test.tsx
fractal-memory-interface/tests/e2e/: chat.spec.ts  memory.spec.ts
fractal-memory-interface/tests/services/: api.test.ts
migrations/: 001_initial_schema.cypher  002_add_soft_delete.cypher  003_fulltext_index.cypher  MIGRATION_GUIDE.md  run_migrations.py
notes/: ARCHITECTURE.md  DEV_JOURNEY.md
notes/archive/: AUDIT_ANALYSIS_RU.md  AUDIT_REPORT_FIXED_RU.md  AUDIT_REPORT_RU.md  AUDIT_SUMMARY.md  AUDIT_SUMMARY_RU.md  COMPLETE_ARCHITECTURE_ANALYSIS_RU.md  CRITICAL_FIXES_COMPLETE.md  FINAL_AUDIT_REPORT_RU.md  PHASE1_REPORT_RU.md  PHASE2_REPORT_RU.md  PHASE3_API_CONSISTENCY_COMPLETE.md  PHASE4_IMPROVEMENTS_COMPLETE.md  REFACTORING_PLAN.md  REMAINING_FIXES_PHASE1_COMPLETE.md  SCHEMA_ANALYSIS_RU.md  АУДИТ_И_ТЕСТИРОВАНИЕ_СВОДКА.md  ИТОГОВЫЙ_ОТЧЕТ_ВСЕХ_ФАЗ_RU.md  ИТОГОВЫЙ_ОТЧЕТ_ФАЗЫ_1_2_RU.md  НЕЗАВЕРШЕННЫЕ_ЗАДАЧИ.md  ФАЗА_4_ЗАВЕРШЕНА.md
scripts/: analyze_audit.py  check_infrastructure.sh  check_vm_resources.sh  create_indexes.cypher  fix_imports.sh  health_check.py  inspect_everything.py  inspect_redis.py  inspect_schema.py  reset_memory.py  run_smoke_test.py  seed_strategies.py  setup_vm.sh  simulate_conversation.py  smoke_test.py  test_full_cycle.py  verify_learning.py  verify_memory.py  wipe_all.py
src/: README.md  __init__.py  agent.py
src/core/: __init__.py  embeddings.py  graphiti_store.py  memory.py  reasoning.py  redis_store.py  retrieval.py  types.py
src/infrastructure/: __init__.py  circuit_breaker.py  health.py  metrics.py  rate_limiter.py  retry.py
tests/: conftest.py  test_agent.py  test_agent_initialization_properties.py  test_api.py  test_graphiti_store.py  test_graphiti_store_unit.py  test_infrastructure.py  test_memory_properties.py  test_memory_unit.py  test_reasoning.py  test_redis_store.py  test_retrieval.py
tests/integration/: test_memory_v2_pipeline.py
worker/: __init__.py
